[package]
name = "h2server"
version = "0.1.0"
edition = "2021"
default-run = "h2_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = {version = "0.3.21"}
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "0.2"
rand = "0.8.5"

